--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -4525,6 +4525,7 @@ $barpublishing-link-hover: #d40b13;
 $barpublishing-grey-1:#dfdfdf;
 $barpublishing-grey-2:#aeaeae;
 $barpublishing-grey-3:#606060;
+$barpublishing-grey-4:#757575;
 
 $barpublishing-background: #fafafa;
 
@@ -4803,7 +4804,7 @@ $barpublishing-white: #fff;
   }
 
   .alert.banner {
-    background-color: #dfdfdf;
+    background-color: #efefef;
     color: $barpublishing-link;
     border-color: $barpublishing-link-hover;
     font-size: 16px;
@@ -5004,8 +5005,8 @@ $barpublishing-white: #fff;
      .active>span,
      .active>span:hover,
      .active>span:focus {
-       background-color: $barpublishing-grey-2;
-       border-color: $barpublishing-grey-2;
+       background-color: $barpublishing-grey-4;
+       border-color: $barpublishing-grey-4;
        color: $barpublishing-white;
      }
 
@@ -5015,8 +5016,8 @@ $barpublishing-white: #fff;
      .disabled>a,
      .disabled>a:hover,
      .disabled>a:focus {
-      background-color: $barpublishing-grey-2;
-      border-color: $barpublishing-grey-2;
+      background-color: $barpublishing-grey-4;
+      border-color: $barpublishing-grey-4;
       color: $barpublishing-white;
      }
   }
@@ -6802,6 +6803,10 @@ $livedplaces-light-secondary: #EEE9E3;
   a, .link {
     color: $livedplaces-link;
     text-decoration: underline;
+  }
+
+  .authentication #institutionList li a {
+    color: #B6431B;
   }
 
   a:hover,
@@ -9252,6 +9257,10 @@ $gabii-link-hover:    #1e5667;
     color: #fff;
     border-radius: 0;
 
+    a {
+      color: #fff;
+    }
+
     .logo {
 	    img {
      	  width: 180px;
@@ -10201,7 +10210,7 @@ $mps-teal-100: #e9f2f5;
 ///////////////////////////////////////////////
 // colors
 $a2ru-brand-color: #64b145;
-$a2ru-link: #ed1b68;
+$a2ru-link: #d9115b;
 $a2ru-accent-link: #A10941;
 $a2ru-black-80: #333;
 $a2ru-blue-light: #148ec2;
@@ -10286,7 +10295,7 @@ $a2ru-white: #fafafa;
     border-bottom: 2px solid $a2ru-link;
 
     .navbar-brand {
-      color: $a2ru-brand-color;
+      color: #467d31;
       @include rubik;
       font-weight: 400;
       text-transform: none;
@@ -14900,6 +14909,7 @@ $psu-gray-1: #3F4550;
     .press-block-a,
     .press-block-b {
       background-color: $psu-brand-color-alt;
+      color: #333;
 
       .crop {
         img {
